@@ -1,11 +1,10 @@
 package de.muenchen.dave.domain.enums;
 
-import lombok.AllArgsConstructor;
-import lombok.Getter;
-
 import java.io.Serializable;
 import java.util.Arrays;
 import java.util.List;
+import lombok.AllArgsConstructor;
+import lombok.Getter;
 
 @AllArgsConstructor
 @Getter
@@ -17,7 +16,7 @@ public enum Fahrzeug implements Serializable {
                     Arrays.asList("SV%", "Sv%", "Schwerverkehrsanteil")), GV_P("GV%", Arrays.asList("GV%", "Gv%", "Güterverkehrsanteil")),
     // Klassen
     PKW("PKW", Arrays.asList("PKW", "Personenkraftwagen")), LKW("LKW", Arrays.asList("LKW", "Lastkraftwagen")), LZ("LZ", Arrays.asList("LZ", "Lastzug")), BUS(
-            "BUS", Arrays.asList("Bus")), KRAD("KRAD", Arrays.asList("KRAD", "Motorrad", "Kraftrad")), RAD("RAD",
+            "BUS", List.of("Bus")), KRAD("KRAD", Arrays.asList("KRAD", "Motorrad", "Kraftrad")), RAD("RAD",
                     Arrays.asList("Rad", "Radfahrer", "Radverkehr")), FUSS("FUSS",
                             Arrays.asList("FUSS", "FUß", "Fussgänger", "Fußgänger", "Fussverkehr", "Fußverkehr")), PKW_EINHEIT("PKW_EINHEIT",
                                     Arrays.asList("Personenkraftwageneinheiten", "Personenkraftwagen Einheiten", "Personenkraftwagen-Einheiten"));
